Bug fixes and UI improvements
- Added tutorial video to sidebar
- Shifted default viewBox to not obstruct toolbar
- Hovering over tool buttons for over 3s triggers a help window popup
- Fixed panning with spacebar breaking draw tool
- Fixed grid vertices not aligned to gridlines at some grid segments

--- a/src/input.css
+++ b/src/input.css
@@ -20,6 +20,7 @@
     body {
         padding: 0;
         margin: 0;
+        /* overflow: hidden; */
     }
 
     .centralise {
@@ -89,14 +90,6 @@
     }
 
     .dropdown-item {
-        /* min-width: 160px;
-        height: var(--dropdown-item-height);
-        padding: 8px 16px;
-        display: flex;
-        justify-content: space-between;
-        gap: 16px;
-        align-items: center;
-        cursor: pointer; */
         @apply min-w-[160px] relative flex justify-between gap-4 items-center cursor-pointer py-2 px-4 bg-white text-onBackgroundVariant ;
     }
 
@@ -167,27 +160,6 @@
         stroke: white;
         stroke-width: 3px;
     }
-/* 
-    #footer {
-        width: 100vw;
-        position: absolute;
-        bottom: 0px;
-        padding: 16px 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    } */
-
-    /* #exportForm {
-        @apply p-8 absolute left-[calc(50%-400px)] top-[calc(50%-300px)] w-[800px] h-[500px] bg-white rounded-xl flex gap-2
-        position: absolute;
-        padding: 48px 96px;
-        border-radius: 24px;
-        background-color: white;
-        display: flex;
-        flex-direction: column;
-        gap: 24px;
-    } */
 
     #exportBody input {
         @apply p-2 stroke-onBackgroundVariant2
@@ -228,16 +200,6 @@
         align-items: center;
     }
 
-    .tools {
-        @apply bg-tertiary p-2 rounded-2xl flex gap-2 shadow
-        /* background-color: white;
-        padding: 8px;
-        border-radius: 12px;
-        border: 1px solid black;
-        display: flex;
-        gap: 8px; */
-    }
-
     .tool-button {
         width: 50px;
         height: 50px;
@@ -264,10 +226,6 @@
     .edge-type:hover {
         opacity: 0.7
     }
-
-    /* #edges {
-        @apply p-2 bg-white border-solid border-2 border-black rounded-full absolute bottom-0 right-[-10px] flex flex-col gap-2
-    } */
 
     .mountain {
         @apply bg-red fill-red
@@ -319,35 +277,22 @@
         transition: opacity 300ms ease-out;
     }
 
-    #dialogue {
-        width: min-content;
-        min-width: 400px;
-        max-width: 600px;
-        min-height: 200px;
-        max-height: 400px;
-        margin: 2rem;
-        border-radius: 0.5rem;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: white;
-        display: flex;
-        flex-direction: column;
-        @apply shadow-md;
-        visibility: hidden;
+    .ping {
+        animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+        animation-fill-mode: forwards;
+   }
+   
+   @keyframes ping {
+    0% {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 0.75;
     }
-
-    #sidebar {
-        position: absolute;
-        right: 0px;
-        top: 50%;
-        transform: translateY(-50%);
-        display: flex;
-        align-items: end;
-        flex-direction: column;
-        gap: 1rem;
+    75%,
+    100% {
+        transform: translate(-50%, -50%) scale(1.5);
+        opacity: 0;
     }
+  }  
 
     #sidebarToggle {
         position: absolute;
