--- a/src/output.css
+++ b/src/output.css
@@ -123,6 +123,7 @@
 body {
   padding: 0;
   margin: 0;
+  /* overflow: hidden; */
 }
 
 .centralise {
@@ -237,14 +238,6 @@ div#filename {
 }
 
 .dropdown-item {
-  /* min-width: 160px;
-        height: var(--dropdown-item-height);
-        padding: 8px 16px;
-        display: flex;
-        justify-content: space-between;
-        gap: 16px;
-        align-items: center;
-        cursor: pointer; */
   position: relative;
   display: flex;
   min-width: 160px;
@@ -259,7 +252,7 @@ div#filename {
   padding-left: 1rem;
   padding-right: 1rem;
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity))
 }
 
 :hover.dropdown-item {
@@ -333,28 +326,6 @@ circle.marker, line.selector {
   stroke-width: 3px;
 }
 
-/* 
-    #footer {
-        width: 100vw;
-        position: absolute;
-        bottom: 0px;
-        padding: 16px 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    } */
-
-/* #exportForm {
-        @apply p-8 absolute left-[calc(50%-400px)] top-[calc(50%-300px)] w-[800px] h-[500px] bg-white rounded-xl flex gap-2
-        position: absolute;
-        padding: 48px 96px;
-        border-radius: 24px;
-        background-color: white;
-        display: flex;
-        flex-direction: column;
-        gap: 24px;
-    } */
-
 #exportBody input {
   stroke: #9ca3af;
   padding: 0.5rem
@@ -404,18 +375,6 @@ circle.marker, line.selector {
   align-items: center;
 }
 
-.tools {
-  display: flex;
-  gap: 0.5rem;
-  border-radius: 1rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 232 255 / var(--tw-bg-opacity));
-  padding: 0.5rem;
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
-}
-
 .tool-button {
   width: 50px;
   height: 50px;
@@ -444,10 +403,6 @@ circle.marker, line.selector {
 .edge-type:hover {
   opacity: 0.7
 }
-
-/* #edges {
-        @apply p-2 bg-white border-solid border-2 border-black rounded-full absolute bottom-0 right-[-10px] flex flex-col gap-2
-    } */
 
 .mountain {
   --tw-bg-opacity: 1;
@@ -517,37 +472,22 @@ circle.marker, line.selector {
   transition: opacity 300ms ease-out;
 }
 
-#dialogue {
-  width: -moz-min-content;
-  width: min-content;
-  min-width: 400px;
-  max-width: 600px;
-  min-height: 200px;
-  max-height: 400px;
-  margin: 2rem;
-  border-radius: 0.5rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  visibility: hidden;
+.ping {
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+  animation-fill-mode: forwards;
 }
 
-#sidebar {
-  position: absolute;
-  right: 0px;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  align-items: end;
-  flex-direction: column;
-  gap: 1rem;
+@keyframes ping {
+  0% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 0.75;
+  }
+
+  75%,
+    100% {
+    transform: translate(-50%, -50%) scale(1.5);
+    opacity: 0;
+  }
 }
 
 #sidebarToggle {
@@ -583,8 +523,8 @@ circle.marker, line.selector {
   position: relative
 }
 
-.bottom-4 {
-  bottom: 1rem
+.bottom-\[1px\] {
+  bottom: 1px
 }
 
 .bottom-\[82px\] {
@@ -607,6 +547,10 @@ circle.marker, line.selector {
   right: 1rem
 }
 
+.right-\[1px\] {
+  right: 1px
+}
+
 .top-0 {
   top: 0px
 }
@@ -619,8 +563,24 @@ circle.marker, line.selector {
   top: 0.75rem
 }
 
+.bottom-4 {
+  bottom: 1rem
+}
+
 .z-50 {
   z-index: 50
+}
+
+.z-10 {
+  z-index: 10
+}
+
+.z-0 {
+  z-index: 0
+}
+
+.m-8 {
+  margin: 2rem
 }
 
 .block {
@@ -647,12 +607,24 @@ circle.marker, line.selector {
   height: 50px
 }
 
+.h-\[75px\] {
+  height: 75px
+}
+
 .h-full {
   height: 100%
 }
 
+.max-h-\[400px\] {
+  max-height: 400px
+}
+
 .min-h-\[100px\] {
   min-height: 100px
+}
+
+.min-h-\[200px\] {
+  min-height: 200px
 }
 
 .w-0\.5 {
@@ -667,6 +639,10 @@ circle.marker, line.selector {
   width: 50px
 }
 
+.w-\[75px\] {
+  width: 75px
+}
+
 .w-full {
   width: 100%
 }
@@ -674,6 +650,19 @@ circle.marker, line.selector {
 .w-max {
   width: -moz-max-content;
   width: max-content
+}
+
+.w-min {
+  width: -moz-min-content;
+  width: min-content
+}
+
+.min-w-\[400px\] {
+  min-width: 400px
+}
+
+.max-w-\[600px\] {
+  max-width: 600px
 }
 
 .flex-grow {
@@ -690,6 +679,10 @@ circle.marker, line.selector {
 
 .basis-1\/2 {
   flex-basis: 50%
+}
+
+.origin-center {
+  transform-origin: center
 }
 
 .translate-x-\[-50\%\] {
@@ -758,6 +751,10 @@ circle.marker, line.selector {
   align-self: center
 }
 
+.overflow-hidden {
+  overflow: hidden
+}
+
 .rounded-2xl {
   border-radius: 1rem
 }
@@ -774,6 +771,10 @@ circle.marker, line.selector {
   border-radius: 9999px
 }
 
+.rounded-lg {
+  border-radius: 0.5rem
+}
+
 .border {
   border-width: 1px
 }
@@ -783,8 +784,18 @@ circle.marker, line.selector {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity))
 }
 
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(103 80 164 / var(--tw-bg-opacity))
+}
+
 .bg-scrim {
   background-color: rgba(0,0,0,0.4)
+}
+
+.bg-tertiary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 232 255 / var(--tw-bg-opacity))
 }
 
 .bg-white {
@@ -886,6 +897,12 @@ circle.marker, line.selector {
 .shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
 }
 
